--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,13 +7,16 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
+// $blue: #3490dc;
+$blue: #4285f4;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
-$red: #e3342f;
+// $red: #e3342f;
+$red: #ea4335;
 $orange: #f6993f;
-$yellow: #ffed4a;
+// $yellow: #ffed4a;
+$yellow: #fbbc05;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
