--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,15 +8,26 @@ $line-height-base: 1.6;
 
 // Colors
 // $blue: #3490dc;
-$blue: #4285f4;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
+// $indigo: #6574cd;
+// $purple: #9561e2;
+// $pink: #f66d9b;
 // $red: #e3342f;
-$red: #ea4335;
-$orange: #f6993f;
+// $orange: #f6993f;
 // $yellow: #ffed4a;
-$yellow: #fbbc05;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+// $green: #38c172;
+// $teal: #4dc0b5;
+// $cyan: #6cb2eb;
+
+$blue: #007bff;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #28a745;
+$teal: #20c997;
+$cyan: #17a2b8;
+
+
+
