--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,3 +12,10 @@
 .t-min {
     width: 1%;
 }
+
+/* Estilo para imagenes de la tabla */
+table tbody tr td img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
