Importo sweetalert al CSS

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,5 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+@import '~sweetalert2/src/sweetalert2.scss';
